# soft-typing-python

./: README  README.html  generate-output  makefile  softtype  softtype-ann-graph  softtype-graph  softtype-graph-png  softtyping.cabal  useful.hs
src/: .ghci  Main.hs
src/Analysis/: Lattice.hs  Monotone.hs  Monotone.hs.orig  Python.ag  Python.hs
src/IPython/: AST.ag  AST.hs  Conversion.hs  Pretty.hs  Typing.hs
src/Output/: Graph.hs
test/: assign.py  circular.py  coercion.py  conditional.py  conditional.py.orig  fac.py  fib.py  functioncall.py  global.scope.py  indirection.py  loop.py  nested.py  print.py  recursive.py  slides.example.py  while.py
